[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiberius = { version = "0.12.2", features = ["integrated-auth-gssapi", "chrono"] }
anyhow = "1.0.75"
async-std = { version = "1.12.0", features = ["attributes"] }
chrono = "0.4.28"
serde = "1.0.188"
serde_json = "1.0.105"
